@@ -28,6 +28,7 @@ export(morph)
 export(optimizePars)
 export(osc_dB)
 export(playme)
+export(reportTime)
 export(schwa)
 export(segment)
 export(segmentFolder)
